<resources>
    <string name="app_name">Dasbor Pribadi</string>
    <string name="widget_card_name">Dasbor Lengkap (4x2 / 3x2)</string>
    <string name="widget_bar_name">Bar Aksi Cepat (4x1)</string>
    <string name="widget_task_name">Tugas &amp; Aktivitas (4x2 / 3x2)</string>
    <string name="widget_description">Pintasan cepat pencatatan keuangan dan target impian di layar utama</string>
    <string name="widget_btn_income">Masuk</string>
    <string name="widget_btn_expense">Keluar</string>
    <string name="widget_btn_notes">Catatan</string>
    <string name="widget_btn_calc">Impian</string>
</resources>
