<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget_bar_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/widget_bg"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="6dp"
    android:paddingBottom="6dp">



    <LinearLayout
        android:id="@+id/btn_bar_income"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="4dp"
        android:layout_marginEnd="4dp"
        android:layout_weight="1"
        android:background="@drawable/btn_income_bg"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingTop="7dp"
        android:paddingBottom="7dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+ "
            android:textColor="@color/income_green"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/widget_btn_income"
            android:textColor="@color/income_green"
            android:textSize="10sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_bar_expense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="4dp"
        android:layout_marginEnd="4dp"
        android:layout_weight="1"
        android:background="@drawable/btn_expense_bg"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingTop="7dp"
        android:paddingBottom="7dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="- "
            android:textColor="@color/expense_red"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/widget_btn_expense"
            android:textColor="@color/expense_red"
            android:textSize="10sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_bar_notes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="4dp"
        android:layout_marginEnd="4dp"
        android:layout_weight="1"
        android:background="@drawable/btn_neutral_bg"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingTop="7dp"
        android:paddingBottom="7dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/widget_btn_notes"
            android:textColor="@color/amber_gold"
            android:textSize="10sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_bar_calc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/btn_neutral_bg"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingTop="7dp"
        android:paddingBottom="7dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/widget_btn_calc"
            android:textColor="@color/primary_blue"
            android:textSize="10sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>